# desktop-livecat

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: check.yml  windows-release.yml
docs/: ai-pet-asset-generation-spec.md  artist-handoff.md  distribution.md  focus-loop.md  keyboard-sync.md  live2d-ai-generation-research.md  live2d-art-brief.md  live2d-rigging-handoff.md  live2d-tooling.md  pet-asset-pipeline-standards.md  pet-brain-body-roadmap.md  pet-interaction-ux-knowledge.md  pet-knowledge-automation.md  pet-knowledge-changelog.md  pet-motion-asset-brief.md  pet-product-design-knowledge.md  research.md  resource-pack.md  roadmap.md  spritesheet-pets.md  troubleshooting.md  win11-qa.md
pets/_spritesheet-template/: manifest.json
pets/_template/: README.md  manifest.json
pets/gray-british-keyboard/: manifest.json
pets/gray-british-keyboard-v2/: manifest.json
pets/livecat-default/: manifest.json
pets/pixel-mochi/: manifest.json
scripts/: download-webview2-fixed-runtime.mjs  generate-livecat-assets.mjs  generate-spritesheet-assets.mjs  import-incoming-spritesheets.mjs  import-knowledge-review.mjs  install-hatch-pet-pack.mjs  package-portable.mjs  refine-supplied-cat-spritesheets.mjs  validate-resource-packs.mjs  validate-runtime-config.mjs  verify-portable-archives.mjs
src/: App.css  App.tsx  Live2DCanvas.tsx  SpritesheetPet.tsx  live2dRuntime.ts  petBrain.ts  petState.ts  tauriBridge.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: keyboard_sync.rs  lib.rs  main.rs
(+41 files in other folders)
